# SoftRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  opeimize.txt
Example/: CMakeLists.txt  example.cpp  texture.cpp  triangle.cpp
Example/example1_triangle/: example1_triangle.cpp
Example/example2_texture/: example2_texture.cpp
Example/example3_model/: Model.h  example3_model.cpp
SoftRenderer/: CMakeLists.txt  SoftRenderer.h
SoftRenderer/src/: Math.h  Renderer.cpp  Renderer.h  Timer.h
assets/chaman_ti-pche_3_animations/: scene.gltf
assets/faceted-animation/: Sketchfab.fbx
assets/skybox/: skyDiffuseHDR.dds  skyDiffuseMDR.dds
assets/steampunk_flintlock/: license.txt  scene.gltf
src/: SoftRenderer.cpp
src/Animation/: AnimationModel.h  Animator.h  Bone.cpp  Bone.h
src/Common/: AnimationModel.h  Application.cpp  Application.h  Event.cpp  Event.h  KeyCode.h  Model.h  Scene.h
src/Example/: BlinnPhone.cpp  BlinnPhone.h  Ibl.cpp  Ibl.h  Pbr.cpp  Pbr.h  SkeletalAnimation.cpp  SkeletalAnimation.h
src/Renderer/: Buffer.h  Camera.cpp  Camera.h  FrameBuffer.h  Math.h  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureCube.cpp  TextureCube.h  TextureDrive.h  TextureDrive.inl  Timer.h  Utils.cpp  Utils.h
src/Thread/: ThreadPool.h
src/shaders/: BlinnPhongShader.h  IblShader.h  PbrShader.h  SkyBoxShader.h
